--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.0.1"
 edition = "2021"
 
 authors = ["hehaoqian <39371646+hehaoqian@users.noreply.github.com>"]
+description = "Rust implementation of dynamic linker"
 license = "MIT OR Apache-2.0"
 repository = "https://github.com/hehaoqian/libdlink/"
 keywords = ["dlopen", "dylib", "shared"]
