--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -29,3 +29,16 @@ jobs:
     - uses: actions/checkout@v3
     - name: Format
       run: cargo fmt --check
+
+
+  commit_check:
+
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Block Merge Commits
+      uses: Morishiri/block-merge-commits-action@v1.0.1
+      with:
+        repo-token: ${{ secrets.GITHUB_TOKEN }}
+
+
